src/views/project/styles.css
.matrix-cards {
  margin-bottom: 32px;
  gap: 16px;
}

.action-bar {
  border-bottom: 3px solid rgb(238, 122, 25);
  display: flex;
  gap: 11px;
  margin: 32px 0;
  padding: 8px 0;
}

.alphabet-bar {
  padding: 3px;
  margin-bottom: 5px;
}

.alphabet-bar span {
  font-weight: bold;
  padding-left: 5px;
}

.alphabet-bar span:hover {
  color:rgb(238, 122, 25);
  cursor: pointer;
}

.alphabet-bar span.selected {
  color: gray;
}

.alphabet-bar span.separator {
  color: inherit !important;
  vertical-align: text-bottom;
}

.selection-bar {
  display: flex;
  gap: 5px;
  margin: 8px 0;
}

.selection-bar .item {
  padding: 5px 10px;
  margin: 3px;
}

.selection-bar .item:hover {
  border-radius: 50%;
  border-color: gray;
  background-color: lightgray;
}

.selection-bar .item.disabled {
  opacity: 0.5;
  pointer-events: none;
}

.list-group-item-content {
  display: flex;
  gap: 15px;
}

.list-group-item-name {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.list-group-item-notes {
  font-style: italic;
  padding: 20px 10px 0;
}

.list-group-item-buttons {
  align-items: baseline;
  display: flex;
  gap: 7px;
}

.grid-group-items {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 1.5rem;
}

.grid-group-items > a,
.grid-group-items > div {
  flex: 0 1 8em;
}

